edited the .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-DATABASE_URL=our_database_url_here
-DEBUG=true
+user=pour_user_uri
+password=our_password
+host=our_host
+port=6543
+dbname=postgres
