changed the .env.example a bit

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-user=pour_user_uri
-password=our_password
-host=our_host
+user=postgres.your_project_id
+password=your_database_password
+host=aws-0-region.pooler.supabase.com
 port=6543
 dbname=postgres
